tests/fixtures/invalid/pow_list_bool_none.py
# Cannot call pow() with List[int], Bool, None
x = pow([1, 2, 3], True, None)
